--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <body>
     <header>
 		<div class="container-header">
-        <nav>
+        <nav class="nav-top">
     <!--!top_line-->
                     <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
     <!--!information_menu-->
             <ul class="menu list">
-                    <li><a class="link current" href="./index.html">Студія</a></li>
-                    <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="link" href="#contacts">Контакти</a></li>
+                    <li class="linklu"><a class="link current" href="./index.html">Студія</a></li>
+                    <li class="linklu"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="linklu"><a class="link" href="#contacts">Контакти</a></li>
                     </ul>
                     </nav>
     <!--!contact-->
