--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documen</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
-	<link rel="stylesheet" href="./css/modern-normalize.css">
+	<link href="//cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 	<link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-    <header>
-		<div class="container-header">
-        <nav class="nav-top">
+    <header class="header">
+		<div class="container header-block">
     <!--!top_line-->
                     <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
     <!--!information_menu-->
-            <ul class="menu list">
+	<nav class="nav-top"></nav>
+            <ul class="menu-list list">
                     <li class="linklu"><a class="link current" href="./index.html">Студія</a></li>
                     <li class="linklu"><a class="link" href="./portfolio.html">Портфоліо</a></li>
                     <li class="linklu"><a class="link" href="#contacts">Контакти</a></li>
@@ -33,7 +33,7 @@
     <!--!cap-->
             <section class="cap">
 				<div class="container">
-            <h1 class="cap-title">Ефективні рішення для вашого бізнесу</h1>
+            <h1 class="cap-title">Ефективні рішення для <br> вашого бізнесу</h1>
             <button class="button-order" type="button">Замовити послугу</button>
 			</div>
         </section>
