--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documen</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
-	<link href="//cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+	<link href=//cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css>
 	<link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
@@ -24,8 +24,8 @@
                     </nav>
     <!--!contact-->
                     <ul class="contact list">
-                    <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
+                    <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="item"><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
             </ul>
 			</div>
             </header>
@@ -33,7 +33,7 @@
     <!--!cap-->
             <section class="cap">
 				<div class="container">
-            <h1 class="cap-title">Ефективні рішення для <br> вашого бізнесу</h1>
+            <h1 class="cap-title">Ефективні рішення для вашого бізнесу</h1>
             <button class="button-order" type="button">Замовити послугу</button>
 			</div>
         </section>
