--- a/index.html
+++ b/index.html
@@ -31,30 +31,30 @@
             </header>
             <main>
     <!--!cap-->
-            <section class="cap">
+            <section class="section cap">
 				<div class="container">
             <h1 class="cap-title">Ефективні рішення для вашого бізнесу</h1>
             <button class="button-order" type="button">Замовити послугу</button>
 			</div>
         </section>
     <!--!features-->
-        <section class="section">
+        <section class="section features-section">
 			<div class="container">
-            <h2 class="section-title">Features</h2>
+            <h2 class="section-title hidden">Features</h2>
             <ul class="features list">
-                <li>
+                <li class="item">
                     <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p class="title-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="title-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="title">ПЛАНУВАННЯ</h3>
                     <p class="title-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p class="title-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
