--- a/portfolio.html
+++ b/portfolio.html
@@ -8,33 +8,36 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com">
 	<link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
+	<link href=//cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css>
 	<link rel="stylesheet" href="./css/modern-normalize.css">
 	<link rel="stylesheet" href="./css/styles.css"/>
 	</head>
 	<body>
-	<header>
-		<nav>
-	<!--!top_line-->
-				<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
-	<!--!information_menu-->
-		<ul class="menu list">
-				<li><a class="link" href="./index.html">Студія</a></li>
-				<li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-				<li><a class="link" href="#contacts">Контакти</a></li>
+<header class="header">
+	<div class="container header-block">
+		<!--!top_line-->
+		<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
+		<!--!information_menu-->
+		<nav class="nav-top"></nav>
+		<ul class="menu-list list">
+			<li class="linklu"><a class="link" href="./index.html">Студія</a></li>
+			<li class="linklu"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+			<li class="linklu"><a class="link" href="#contacts">Контакти</a></li>
 		</ul>
 		</nav>
-	<!--!contact-->
+		<!--!contact-->
 		<ul class="contact list">
-				<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
+			<li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+			<li class="item"><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
 		</ul>
-	</header>
+	</div>
+</header>
 	<!--!portfolio_new-->
 	<main>
 		<h1>Наші роботи</h1>
 		<section class="section">
 		<h2>Портфоліо</h2>
-    <!--!button-->
+    <!--!button--> 
 			<ul class="list">
 				<li><button class="filter-btn" type="button">Усі</button></li>
 				<li><button class="filter-btn" type="button">Веб-сайти</button></li>
