--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</div>
         </section>
     </main>
-    <!--!dasement-->
+    <!--!footer-->
     <footer class="footer">
 		<div class="container">
         <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
