--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,11 @@
 </header>
 	<!--!portfolio_new-->
 	<main>
-		<h1>Наші роботи</h1>
+		<h1 class="hidden">Наші роботи</h1>
 		<section class="section">
-		<h2>Портфоліо</h2>
+		<h2 class="hidden">Портфоліо</h2>
     <!--!button--> 
+	<div class="port-button">
 			<ul class="list">
 				<li><button class="filter-btn" type="button">Усі</button></li>
 				<li><button class="filter-btn" type="button">Веб-сайти</button></li>
@@ -45,29 +46,31 @@
 				<li><button class="filter-btn" type="button">Дизайн</button></li>
 				<li><button class="filter-btn" type="button">Маркетинг</button></li>
 			</ul>
+			</div>
 	<!--!portfolio-->
+	<div class="port-img">
 			<ul class="portfolio list">
-				<li>
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg7.jpg" alt="Технокряк" width="370">
 					<h2 class="title">Технокряк</h2>
 					<p class="title-text">Веб-сайт</p>
 					</a>
 				</li>
-				<li>
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg8.jpg" alt="Постер New Orlean vs Golden Star" width="370">
 					<h2 class="title">Постер New Orlean vs Golden Star</h2>
 					<p class="title-text">Дизайн</p>
 					</a>
 				</li>
-				<li>
+				<liclass="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg9.jpg" alt="Ресторан Seafood" width="370">
 					<h2 class="title">Ресторан Seafood</h2>
 					<p class="title-text">Додаток</p>
 					</a>
-				</li>
+				</li class="port-title">
 				<li>
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg10.jpg" alt="Проєкт Prime" width="370">
@@ -75,35 +78,35 @@
 					<p class="title-text">Маркетинг</p>
 					</a>
 				</li>
-				<li>
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg11.jpg" alt="Проєкт Boxes" width="370">
 					<h2 class="title">Проєкт Boxes</h2>
 					<p class="title-text">Додаток</p>
 					</a>
 				</li>
-				<li>
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg12.jpg" alt="Inspiration has no Borders" width="370">
 					<h2 class="title">Inspiration has no Borders</h2>
 					<p class="title-text">Веб-сайт</p>
 					</a>
 				</li>
-				<li>
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg13.jpg" alt="Видання Limited Edition" width="370">
 					<h2 class="title">Видання Limited Edition</h2>
 					<p class="title-text">Дизайн</p>
 					</a>
 				</li>
-				<li>
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg14.jpg" alt="Проєкт LAB" width="370">
 					<h2 class="title">Проєкт LAB</h2>
 					<p class="title-text">Маркетинг</p>
 					</a>
 				</li>
-				<li>
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg15.jpg" alt="Growing Business" width="370">
 					<h2 class="title">Growing Business</h2>
@@ -111,9 +114,10 @@
 					</a>
 				</li>
 			</ul>
+			</div>
 		</section>
 	</main>    
-    <!--!dasement-->
+    <!--!footer-->
             <footer class="footer">
 	<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
 		<address>
