--- a/portfolio.html
+++ b/portfolio.html
@@ -1,24 +1,23 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Documen</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com">
-	<link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
-	<link href=//cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css>
-	<link rel="stylesheet" href="./css/modern-normalize.css">
-	<link rel="stylesheet" href="./css/styles.css"/>
-	</head>
+	<link
+		 href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+	<link rel="stylesheet" href="./css/styles.css">
+</head>
 	<body>
 <header class="header">
 	<div class="container header-block">
 		<!--!top_line-->
 		<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
 		<!--!information_menu-->
-		<nav class="nav-top"></nav>
+		<nav class="nav-top">
 		<ul class="menu-list list">
 			<li class="linklu"><a class="link" href="./index.html">Студія</a></li>
 			<li class="linklu"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
@@ -30,15 +29,19 @@
 			<li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 			<li class="item"><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
 		</ul>
-	</div>
+		</div>
+	
 </header>
 	<!--!portfolio_new-->
 	<main>
+			<section class="section">
+		<div class="container">
+	
 		<h1 class="hidden">Наші роботи</h1>
-		<section class="section">
+	
 		<h2 class="hidden">Портфоліо</h2>
     <!--!button--> 
-	<div class="port-button">
+	
 			<ul class="list">
 				<li><button class="filter-btn" type="button">Усі</button></li>
 				<li><button class="filter-btn" type="button">Веб-сайти</button></li>
@@ -46,9 +49,9 @@
 				<li><button class="filter-btn" type="button">Дизайн</button></li>
 				<li><button class="filter-btn" type="button">Маркетинг</button></li>
 			</ul>
-			</div>
+			
 	<!--!portfolio-->
-	<div class="port-img">
+	
 			<ul class="portfolio list">
 				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
@@ -64,14 +67,14 @@
 					<p class="title-text">Дизайн</p>
 					</a>
 				</li>
-				<liclass="port-title">
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg9.jpg" alt="Ресторан Seafood" width="370">
 					<h2 class="title">Ресторан Seafood</h2>
 					<p class="title-text">Додаток</p>
 					</a>
-				</li class="port-title">
-				<li>
+				</li>
+				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg10.jpg" alt="Проєкт Prime" width="370">
 					<h2 class="title">Проєкт Prime</h2>
@@ -109,26 +112,30 @@
 				<li class="port-title">
 					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg15.jpg" alt="Growing Business" width="370">
+					<div>
 					<h2 class="title">Growing Business</h2>
 					<p class="title-text">Додаток</p>
+					</div>
 					</a>
 				</li>
 			</ul>
-			</div>
+		</div>
 		</section>
 	</main>    
     <!--!footer-->
-            <footer class="footer">
-	<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
+<footer class="footer">
+	<div class="container">
+		<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
 		<address>
-				<a class="address-link"
+			<a class="address-link"
 				href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
 				target="_blank" rel="noopener noreferrer"> м. Київ, пр-т Лесі Українки, 26</a>
 			<ul class="contact-footer list">
 				<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-			<li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+				<li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
 		</address>
-            </footer>
+	</div>
+</footer>
     </body>
     </html>
