--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Documen</title>
 	<link
-		 href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
+		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
 	<link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -30,31 +30,25 @@
 			<li class="item"><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
 		</ul>
 		</div>
-	
 </header>
 	<!--!portfolio_new-->
 	<main>
 			<section class="section">
 		<div class="container">
-	
 		<h1 class="hidden">Наші роботи</h1>
-	
 		<h2 class="hidden">Портфоліо</h2>
     <!--!button--> 
-	
-			<ul class="list">
-				<li><button class="filter-btn" type="button">Усі</button></li>
-				<li><button class="filter-btn" type="button">Веб-сайти</button></li>
-				<li><button class="filter-btn" type="button">Додатки</button></li>
-				<li><button class="filter-btn" type="button">Дизайн</button></li>
-				<li><button class="filter-btn" type="button">Маркетинг</button></li>
+			<ul class="main-btn list">
+				<li class="fiiter"><button class="filter-btn" type="button">Усі</button></li>
+				<li class="fiiter"><button class="filter-btn" type="button">Веб-сайти</button></li>
+				<li class="fiiter"><button class="filter-btn" type="button">Додатки</button></li>
+				<li class="fiiter"><button class="filter-btn" type="button">Дизайн</button></li>
+				<li class="fiiter"><button class="filter-btn" type="button">Маркетинг</button></li>
 			</ul>
-			
 	<!--!portfolio-->
-	
 			<ul class="portfolio list">
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link"href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg7.jpg" alt="Технокряк" width="370">
                     <div>
 					<h2 class="title">Технокряк</h2>
