--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Documen</title>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
 	<link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -48,81 +47,81 @@
 	<!--!portfolio-->
 			<ul class="portfolio list">
 				<li class="port-title">
-					<a class="portfolio-link"href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg7.jpg" alt="Технокряк" width="370">
-                    <div>
+                    <div class="port-text">
 					<h2 class="title">Технокряк</h2>
 					<p class="title-text">Веб-сайт</p>
 					</div>
 					</a> 
 				</li>
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg8.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                    <div>
+                    <div class="port-text">
 					<h2 class="title">Постер New Orlean vs Golden Star</h2>
 					<p class="title-text">Дизайн</p>
 					</div>
 					</a>
 				</li>
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg9.jpg" alt="Ресторан Seafood" width="370">
-                    <div>
+                    <div class="port-text">
 					<h2 class="title">Ресторан Seafood</h2>
 					<p class="title-text">Додаток</p>
 					</div>
 					</a>
 				</li>
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg10.jpg" alt="Проєкт Prime" width="370">
-                    <div>
+                    <div class="port-text">
 					<h2 class="title">Проєкт Prime</h2>
 					<p class="title-text">Маркетинг</p>
 					</div>
 					</a>
 				</li>
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg11.jpg" alt="Проєкт Boxes" width="370"> 
-                    <div>
+                    <div class="port-text">
 					<h2 class="title">Проєкт Boxes</h2>
 					<p class="title-text">Додаток</p>
 					</div>
 					</a>
 				</li>
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg12.jpg" alt="Inspiration has no Borders" width="370"> 
-                    <div>
+                    <div class="port-text">
 					<h2 class="title">Inspiration has no Borders</h2>
 					<p class="title-text">Веб-сайт</p>
 					</div>
 					</a>
 				</li>
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg13.jpg" alt="Видання Limited Edition" width="370"> 
-                    <div>
+                    <div class="port-text">
 					<h2 class="title">Видання Limited Edition</h2>
 					<p class="title-text">Дизайн</p>
 					</div>
 					</a>
 				</li>
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg14.jpg" alt="Проєкт LAB" width="370"> 
-                    <div>
+                    <div class="port-text">
 					<h2 class="title">Проєкт LAB</h2>
 					<p class="title-text">Маркетинг</p>
 					</div>
 					</a>
 				</li>
 				<li class="port-title">
-					<a href="#" target="_blank" rel="noopener noreferrer">
+					<a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg15.jpg" alt="Growing Business" width="370"> 
-					<div>
+					<div class="port-text">
 					<h2 class="title">Growing Business</h2>
 					<p class="title-text">Додаток</p>
 					</div>
