--- a/index.html
+++ b/index.html
@@ -85,23 +85,31 @@
             <ul class="company list">
                 <li class="company-jpg">
                     <img src="./images/jpg3.jpg" alt="product_designer" width="270">
+					<div class="our-company">
                     <h3 class="title">Ігор Дем'яненко</h3>
                     <p class="title-text">Product Designer</p>
+					</div>
                 </li>
                 <li class="company-jpg">
                     <img src="./images/jpg4.jpg" alt="frontend_developer" width="270">
+					<div class="our-company">
                     <h3 class="title">Ольга Рєпіна</h3>
                     <p class="title-text">Frontend Developer</p>
+					</div>
                 </li>
                 <li class="company-jpg">
                     <img src="./images/jpg5.jpg" alt="marketing" width="270">
+					<div class="our-company">
                     <h3 class="title">Микола Тарасов</h3>
                     <p class="title-text">Marketing</p>
+					</div>
                 </li>
                 <li class="company-jpg">
                     <img src="./images/jpg6.jpg" alt="ui_designer" width="270">
+					<div class="our-company">
                     <h3 class="title">Михайло Єрмаков</h3>
                     <p class="title-text">UI Designer</p>
+					</div>
                 </li>
             </ul>
 			</div>
